[gd_scene load_steps=14 format=2]

[ext_resource path="res://shared/scenes/ui/keys/left_key.tscn" type="PackedScene" id=1]
[ext_resource path="res://shared/scenes/ui/keys/right_key.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/scenes/ui/keys/arrow_key.tscn" type="PackedScene" id=3]
[ext_resource path="res://shared/scenes/ui/keys/spacebar.tscn" type="PackedScene" id=4]
[ext_resource path="res://master/scripts/menus/dialogs/controls_dialog.gd" type="Script" id=5]
[ext_resource path="res://shared/scenes/ui/keys/arrow_keys.tscn" type="PackedScene" id=6]
[ext_resource path="res://master/images/menus/buttons/prev_button.png" type="Texture" id=7]
[ext_resource path="res://master/images/menus/buttons/next_button.png" type="Texture" id=8]
[ext_resource path="res://shared/themes/minigame_madness.tres" type="Theme" id=9]

[sub_resource type="InputEventAction" id=1]
action = "move_left"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "move_right"
pressed = true

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="ControlsDialog" type="WindowDialog"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 300 )
theme = ExtResource( 9 )
window_title = "Controls"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slide1" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Slide1"]
margin_left = 20.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 280.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Slide1/VBoxContainer"]
margin_right = 460.0
margin_bottom = 168.0
custom_constants/separation = 20

[node name="SpaceFiller" type="Control" parent="Panel/Slide1/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 168.0
rect_min_size = Vector2( 80, 0 )

[node name="EscapeKey" parent="Panel/Slide1/VBoxContainer/HBoxContainer/SpaceFiller" instance=ExtResource( 3 )]
position = Vector2( 40, 20 )

[node name="Label" type="Label" parent="Panel/Slide1/VBoxContainer/HBoxContainer/SpaceFiller/EscapeKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Esc"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Slide1/VBoxContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 460.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Minigame Madness uses the arrow keys and spacebar for all minigames.  Not all minigames use all of these keys, but none of them use any additional keys.  Additionally, the Escape key can be used to terminate the game immediately and return to the main menu; there is no pause button.
The Escape key can also close pop-ups like this one."
autowrap = true

[node name="SpaceFiller" type="Control" parent="Panel/Slide1/VBoxContainer"]
margin_top = 172.0
margin_right = 460.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 80 )

[node name="ArrowKeys" parent="Panel/Slide1/VBoxContainer/SpaceFiller" instance=ExtResource( 6 )]
position = Vector2( 380, 40 )

[node name="Spacebar" parent="Panel/Slide1/VBoxContainer/SpaceFiller" instance=ExtResource( 4 )]
position = Vector2( 100, 60 )

[node name="Slide2" type="MarginContainer" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 20
custom_constants/margin_left = 60
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Slide2"]
margin_left = 60.0
margin_top = 123.0
margin_right = 440.0
margin_bottom = 177.0
text = "For those who prefer WASD or IJKL to the arrow keys, these controls are also supported, as are their Dvorak equivalents, below."
align = 1
autowrap = true

[node name="WASD" type="Node2D" parent="Panel/Slide2"]
position = Vector2( 100, 62.105 )
__meta__ = {
"_edit_group_": true
}

[node name="UpKey" parent="Panel/Slide2/WASD" instance=ExtResource( 3 )]
position = Vector2( 0, -20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASD/UpKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "W"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftKey" parent="Panel/Slide2/WASD" instance=ExtResource( 3 )]
position = Vector2( -40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASD/LeftKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownKey" parent="Panel/Slide2/WASD" instance=ExtResource( 3 )]
position = Vector2( 0, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASD/DownKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "S"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightKey" parent="Panel/Slide2/WASD" instance=ExtResource( 3 )]
position = Vector2( 40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASD/RightKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "D"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WASDDvorak" type="Node2D" parent="Panel/Slide2"]
position = Vector2( 100, 225 )
__meta__ = {
"_edit_group_": true
}

[node name="UpKey" parent="Panel/Slide2/WASDDvorak" instance=ExtResource( 3 )]
position = Vector2( 0, -20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASDDvorak/UpKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = ","
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftKey" parent="Panel/Slide2/WASDDvorak" instance=ExtResource( 3 )]
position = Vector2( -40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASDDvorak/LeftKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownKey" parent="Panel/Slide2/WASDDvorak" instance=ExtResource( 3 )]
position = Vector2( 0, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASDDvorak/DownKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "O"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightKey" parent="Panel/Slide2/WASDDvorak" instance=ExtResource( 3 )]
position = Vector2( 40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/WASDDvorak/RightKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "E"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IJKL" type="Node2D" parent="Panel/Slide2"]
position = Vector2( 400, 62.105 )
__meta__ = {
"_edit_group_": true
}

[node name="UpKey" parent="Panel/Slide2/IJKL" instance=ExtResource( 3 )]
position = Vector2( 0, -20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKL/UpKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "I"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftKey" parent="Panel/Slide2/IJKL" instance=ExtResource( 3 )]
position = Vector2( -40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKL/LeftKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "J"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownKey" parent="Panel/Slide2/IJKL" instance=ExtResource( 3 )]
position = Vector2( 0, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKL/DownKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "K"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightKey" parent="Panel/Slide2/IJKL" instance=ExtResource( 3 )]
position = Vector2( 40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKL/RightKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "L"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IJKLDvorak" type="Node2D" parent="Panel/Slide2"]
position = Vector2( 400, 225 )
__meta__ = {
"_edit_group_": true
}

[node name="UpKey" parent="Panel/Slide2/IJKLDvorak" instance=ExtResource( 3 )]
position = Vector2( 0, -20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKLDvorak/UpKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "C"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftKey" parent="Panel/Slide2/IJKLDvorak" instance=ExtResource( 3 )]
position = Vector2( -40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKLDvorak/LeftKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "H"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownKey" parent="Panel/Slide2/IJKLDvorak" instance=ExtResource( 3 )]
position = Vector2( 0, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKLDvorak/DownKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "T"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightKey" parent="Panel/Slide2/IJKLDvorak" instance=ExtResource( 3 )]
position = Vector2( 40, 20 )

[node name="Label" type="Label" parent="Panel/Slide2/IJKLDvorak/RightKey"]
margin_left = -14.0
margin_top = -14.0
margin_right = 14.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "N"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slide3" type="MarginContainer" parent="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Slide3"]
margin_left = 20.0
margin_top = 20.0
margin_right = 480.0
margin_bottom = 304.0
custom_constants/separation = 10

[node name="Label1" type="Label" parent="Panel/Slide3/VBoxContainer"]
margin_right = 460.0
margin_bottom = 35.0
text = "Some minigames will show you a prompt like this indicating what the spacebar does."
align = 1
autowrap = true

[node name="SpaceFiller" type="Control" parent="Panel/Slide3/VBoxContainer"]
margin_top = 45.0
margin_right = 460.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )

[node name="Spacebar" parent="Panel/Slide3/VBoxContainer/SpaceFiller" instance=ExtResource( 4 )]
position = Vector2( 230, 20 )

[node name="Label" type="Label" parent="Panel/Slide3/VBoxContainer/SpaceFiller/Spacebar"]
margin_left = -74.0
margin_top = -14.0
margin_right = 74.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Prompt!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel/Slide3/VBoxContainer"]
margin_top = 95.0
margin_right = 460.0
margin_bottom = 149.0
size_flags_vertical = 0
text = "Some minigames may use flashing indicators to suggest button mashing, or dim indicators to show that a key should not be pressed."
align = 1
autowrap = true

[node name="SpaceFiller2" type="Control" parent="Panel/Slide3/VBoxContainer"]
margin_top = 159.0
margin_right = 460.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 40 )

[node name="RightKey" parent="Panel/Slide3/VBoxContainer/SpaceFiller2" instance=ExtResource( 2 )]
position = Vector2( 290, 20 )
animation = "blink"

[node name="LeftKey" parent="Panel/Slide3/VBoxContainer/SpaceFiller2" instance=ExtResource( 1 )]
position = Vector2( 170, 20 )
animation = "dim"

[node name="Label" type="Label" parent="Panel/Slide3/VBoxContainer"]
margin_top = 209.0
margin_right = 460.0
margin_bottom = 244.0
text = "However, not all minigames have prompts like these.  You'll have to think fast to figure out how to play each minigame!"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevSlideButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 197.0
margin_right = 221.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
rect_pivot_offset = Vector2( 12, 12 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 7 )

[node name="HScrollBar" type="HScrollBar" parent="HBoxContainer"]
margin_left = 225.0
margin_right = 275.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 24 )
max_value = 2.0
step = 1.0

[node name="NextSlideButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 279.0
margin_right = 303.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 8 )
[connection signal="popup_hide" from="." to="." method="_on_ControlsDialog_popup_hide"]
[connection signal="pressed" from="HBoxContainer/PrevSlideButton" to="." method="prev_slide"]
[connection signal="value_changed" from="HBoxContainer/HScrollBar" to="." method="_on_HScrollBar_changed"]
[connection signal="pressed" from="HBoxContainer/NextSlideButton" to="." method="next_slide"]
